<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B9DC8E"
    tools:context=".Overzicht">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="91dp"
        android:layout_height="103dp"
        android:layout_marginEnd="333dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_1" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="416dp"
        android:layout_height="632dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/CV_kas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:backgroundTint="#745E7E39"
                android:hapticFeedbackEnabled="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TV_kas"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="44dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/chivo"
                        android:text="@string/kas"
                        android:textAlignment="center"
                        android:textColor="#BCE38F"
                        android:textSize="36sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/TV_kasnummer"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/TV_kasnummer"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="44dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/chivo"
                        android:textAlignment="center"
                        android:textColor="#BCE38F"
                        android:textSize="36sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TV_kas" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CV_pH"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardBackgroundColor="#745E7E39">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TV_pH"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/chivo"
                        android:text="@string/ph_waarde"
                        android:textAlignment="center"
                        android:textColor="#BCE38F"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/TV_pHwaarde"
                            android:layout_width="112dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/chivo"
                            android:text="7"
                            android:textAlignment="center"
                            android:textColor="#BCE38F"
                            android:textSize="60sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="39dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="137dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/alarm"
                            app:srcCompat="@android:drawable/ic_delete" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/CV_luchtTemp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardBackgroundColor="#745E7E39">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TV_luchtTemp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/chivo"
                        android:text="@string/luchttemperatuur"
                        android:textAlignment="center"
                        android:textColor="#BCE38F"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/TV_luchtTemp_waarde"
                            android:layout_width="39dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/chivo"
                            android:text="18℃"
                            android:textAlignment="center"
                            android:textColor="#BCE38F"
                            android:textSize="60sp"
                            android:textStyle="bold"
                            tools:text="18℃" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="37dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="137dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/alarm"
                            app:srcCompat="@android:drawable/ic_delete" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CV_luchtVocht"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardBackgroundColor="#745E7E39">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TV_luchtVocht"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/chivo"
                        android:text="@string/luchtvochtigheid"
                        android:textAlignment="center"
                        android:textColor="#BCE38F"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/TV_luchtVocht_waarde"
                            android:layout_width="24dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/chivo"
                            android:text="70%"
                            android:textAlignment="center"
                            android:textColor="#BCE38F"
                            android:textSize="60sp"
                            android:textStyle="bold"
                            tools:text="70%" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="24dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="137dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/alarm"
                            app:srcCompat="@android:drawable/ic_delete" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/CV_bodemTemp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardBackgroundColor="#745E7E39">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TV_bodemTemp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/chivo"
                        android:text="@string/bodemtemperatuur"
                        android:textAlignment="center"
                        android:textColor="#BCE38F"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/TV_bodemTemp_waarde"
                            android:layout_width="45dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/chivo"
                            android:text="10℃"
                            android:textAlignment="center"
                            android:textColor="#BCE38F"
                            android:textSize="60sp"
                            android:textStyle="bold"
                            tools:text="10℃" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="45dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="137dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/alarm"
                            app:srcCompat="@android:drawable/ic_delete" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CV_bodemVocht"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardBackgroundColor="#745E7E39">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TV_bodemVocht"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/chivo"
                        android:text="@string/bodemvochtigheid"
                        android:textAlignment="center"
                        android:textColor="#BCE38F"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/TV_bodemVocht_waarde"
                            android:layout_width="28dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/chivo"
                            android:textAlignment="center"
                            android:textColor="#BCE38F"
                            android:textSize="60sp"
                            android:textStyle="bold"
                            tools:text="60%" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="48dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="137dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:srcCompat="@android:drawable/ic_delete" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>